tests/snapshots/snapshots__budget_react_hot_toast_src_components_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (496 tokens)

checkmark.tsx
    29→export interface CheckmarkTheme {
    30→  primary?: string;
    31→  secondary?: string;
    32→}
    34→export const CheckmarkIcon = styled('div')<CheckmarkTheme>`

error.tsx
    33→export interface ErrorTheme {
    34→  primary?: string;
    35→  secondary?: string;
    36→}
    38→export const ErrorIcon = styled('div')<ErrorTheme>`

loader.tsx
    12→export interface LoaderTheme {
    13→  primary?: string;
    14→  secondary?: string;
    15→}
    17→export const LoaderIcon = styled('div')<LoaderTheme>`

toast-bar.tsx
     8→const enterAnimation …
    13→const exitAnimation …
    47→interface ToastBarProps {
    48→  toast: Toast;
    49→  position?: ToastPosition;
    50→  style?: React.CSSProperties;
    51→  children?: (components: {
    52→    icon: Renderable;
    53→    message: Renderable;
    54→  }) => Renderable;
    55→}
    57→const getAnimationStyle …
    75→export const ToastBar: React.FC<ToastBarProps> = React.memo(

toast-icon.tsx
    32→export const AnimatedIconWrapper = styled('div')`
    41→export type IconThemes = Partial<{
    47→export const ToastIcon: React.FC<{
    48→  toast: Toast;
    49→}> = ({ toast }) => {
    50→  const { icon, type, iconTheme } = toast;
    51→  if (icon !== undefined) {
    52→    if (typeof icon === 'string') {
      →…

toaster.tsx
    15→const ToastWrapper …
    47→const getPositionStyle …
    85→export const Toaster: React.FC<ToasterProps> = ({
    86→  reverseOrder,
    87→  position = 'top-center',
    88→  toastOptions,
    89→  gutter,
    90→  children,
      →…
